[package]
name = "rust_rss_reader"
version = "1.3.2"
description = "A lightweight and high-performance RSS reader for Windows 10"
authors = ["chtcrack <chtcrack@gmail.com>"]
edition = "2024"

[dependencies]
# GUI框架
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["persistence", "default_fonts", "glow"] }
egui_extras = { version = "0.33.3", features = ["http", "image"] }


# HTTP客户端和异步运行时
reqwest = { version = "0.12.25", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"

# RSS解析和OPML支持
rss = "2.0.12"
opml = "1.1.6"

# 数据存储
duckdb = { version = "1.4.3", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# HTML处理
html2text = "0.16.5"
html-escape = "0.2.13"
flate2 = "1.0.28"  # 用于gzip解压
encoding_rs = "0.8.35"  # 用于多种编码支持

# 系统托盘和通知功能
tray-item = "0.10.0"
notify-rust = { version = "4.11.7", optional = true }

# 配置管理
config = { version = "0.15.19", features = ["json"] }

# 错误处理
thiserror = "2.0.17"
anyhow = "1.0.75"

# 时间处理
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"  # 时区支持

# XML处理
roxmltree = "0.21.1"

# 目录管理
dirs = "6.0.0"

# 随机数生成
rand = "0.9.2"
rand_core = "0.6.4"

# 加密库
aes-gcm = "0.10.3"
data-encoding = "2.5.0"



# 日志
env_logger = "0.11.8"
log = "0.4.28"

# Windows API (用于控制控制台窗口和系统托盘)
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
windows-sys = "0.61.2"

# 打开文件/URL
open = "5.0.0"
futures = "0.3.31"
url = "2.5.7"
rfd = "0.16.0"
ammonia = "4.1.2"
headless_chrome = { version = "1.0.20", features = ["fetch"]}
num_cpus = "1.17.0"



[features]
default = ["tray"]
tray = ["notify-rust"]


[profile.release]
strip = true
opt-level = 3
lto = true

# 默认二进制文件配置
[[bin]]
name = "rust_rss_reader"
path = "src/main.rs"


